--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
 <body>
 
-<h1>Web app</h1>
-
-<p>Hey there...</p>
-
-</body>
-</html>
+<form> 
+  Username:<br> 
+  <input type="text" name="username"> 
+  <br> 
+  Email id:<br> 
+  <input type="text" name="email_id"> 
+  <br><br> 
+  <input type="submit" value="Submit"> 
+</form>  
+  
+</body> 
+</html> 
